# rt-wnd

./: .gitignore  Cargo.toml  README.md  flake.nix  run-it.sh
src/: camera.rs  hittable.rs  main.rs  material.rs  ray.rs  render.rs  scene.rs  sphere.rs  vec3.rs
