[package]
name = "rt-wnd"
version = "0.1.0"
authors = ["Fernando Luiz Parisotto <fernando.parisotto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
rayon = "1.11.0"
softbuffer = "0.4.6"
winit = "0.30.12"
