[package]
name = "rt-wnd"
version = "0.1.0"
authors = ["Fernando Luiz Parisotto <fernando.parisotto@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
rayon = "1.11.0"
raylib = { version = "5.5.1", features = ["wayland"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
